# ark

./: Cargo.toml  README.md  build.rs
ark-cli/: Cargo.toml
ark-cli/src/: lib.rs
ark-core/: Cargo.toml  build.rs
ark-core/protos/: announcement.proto  common.proto  keyring.proto  manifest.proto  objects.proto
ark-core/src/: announcement.rs  ark.rs  ark_seed.rs  autonomi_config.rs  bridge_key.rs  data_key.rs  helm_key.rs  lib.rs  manifest.rs  objects.rs  progress.rs  vault.rs  worker_key.rs
ark-core/src/crypto/: keyring.rs  keys.rs  mod.rs  pointer.rs  register.rs  scratchpad.rs
ark-core/src/crypto/encrypt/: age.rs  mod.rs
ark-engine/: Cargo.toml
ark-engine/src/: main.rs
ark-transport/: Cargo.toml
ark-transport/src/: lib.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: ark.rs  autonomi_config.rs  lib.rs  manifest.rs  vault.rs
core/src/crypto/: keys.rs  mod.rs  pointer.rs  scratchpad.rs
engine/: Cargo.toml
engine/src/: lib.rs
local-patches/rust-bip39-2.1.0/: Cargo.toml
protos/: common.proto  keyring.proto  manifest.proto
src/: engine.rs  lib.rs  main.rs  manifest.rs  util.rs  vault.rs
src/crypto/: chunk.rs  keyring.rs  mod.rs  register.rs  scratchpad.rs  typed.rs
src/keys/: mod.rs  typed.rs
