[package]
name = "ark-cli"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
autonomi = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "3"
ark-core = { path = "../ark-core" }
futures-util = { workspace = true }
indicatif = "0.17"
once_cell = "1.21"
rpassword = "7.4"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = { workspace = true }