[package]
name = "ark-engine"
version = "0.0.2"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
autonomi = { workspace = true }
chrono = { workspace = true }
ark-core = { path = "../ark-core" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }