[package]
name = "core"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
autonomi = { workspace = true }
ant-bootstrap = "0.2.2"
bech32 = { version = "0.11", features = ["alloc"] }
bip39 = { version = "2.1", features = ["zeroize", "rand"] }
blsttc = "8.0.2"
bon = "3.6"
bytes = { workspace = true }
chrono = { workspace = true }
moka = { version = "0.12", features = ["future"] }
once_cell = "1.21"
prost = "0.13"
rand = { version = "0.9", features = ["thread_rng"] }
sn_bls_ckd = "0.2.1"
sn_curv = { version = "0.10.1", default-features = false, features = ["num-bigint"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { version = "1.16", features = ["v7"] }
zeroize = { workspace = true }

[build-dependencies]
anyhow = "1"
prost-build = "0.13"
protoc-bin-vendored = "3.1"
tokio = { version = "1.44", features = ["full"] }